--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.40",
         "laravel/tinker": "^2.5",
+        "phpoffice/phpspreadsheet": "^1.18",
         "twilio/sdk": "^6.28"
     },
     "require-dev": {
